fix(empty state): fix rowgap spacer

--- a/src/patternfly/components/EmptyState/empty-state.scss
+++ b/src/patternfly/components/EmptyState/empty-state.scss
@@ -50,7 +50,7 @@
   --#{$empty-state}--m-xl__body--MarginBlockStart: var(--pf-t--global--spacer--xl);
 
   // Footer
-  --#{$empty-state}__footer--RowGap: var(--pf-t--global--spacer--sm);
+  --#{$empty-state}__footer--RowGap: var(--pf-t--global--spacer--gap--group-to-group--vertical);
   --#{$empty-state}__footer--MarginBlockStart: var(--pf-t--global--spacer--xl);
   --#{$empty-state}--m-xs__footer--MarginBlockStart: var(--pf-t--global--spacer--md);
 
